# py_momentum

./: .gitignore  .pre-commit-config.yaml  README.md  backtester_cli.py  codecov.yml  config.yaml  data_processor_cli.py  docker-compose.yml  downloader_cli.py  get_snp500_tickers.py  main.py  notepad.py  pyproject.toml  run.py  workspace.yaml
.github/worflows/: python-ci.yml
app/: cache.py  config.py  database.py
app/data/: models.py  router.py  service.py
app/data/repository/: base.py  database.py  yahoo_finance.py
app/portfolio/: models.py  router.py  service.py
app/portfolio_state/: exceptions.py  models.py  router.py  service.py
app/portfolio_state/repository/: base.py  database.py
app/strategy/: models.py  momentum_strategy.py  router.py  service.py  strategy_interface.py  utils.py
app/trade_execution/: exceptions.py  models.py  router.py  service.py
cli/: backtest.py  download_data.py  process_data.py
config/: config.yaml
data/: tickers.txt
py_momentum/: backtester.py  config_handler.py  main.py  pyproject.toml  tickers.txt
py_momentum/analysis/: performance.py  performance_analyser.py  results_summary.py
py_momentum/app/: cache.py  config.py  database.py  main.py
py_momentum/app/data/: models.py  router.py  service.py
py_momentum/app/data/repository/: base.py  database.py  yahoo_finance.py
py_momentum/app/strategy/: models.py  momentum_strategy.py  router.py  service.py  strategy_interface.py  utils.py
py_momentum/backtester/: backtester.py
py_momentum/backtesting/: backtester.py
py_momentum/dagster/: definitions.py  run_stock_data.py
py_momentum/dagster/assets/: stock_data.py
py_momentum/dagster/resources/: database.py  yahoo_finance.py
py_momentum/dagster/schedules/: stock_data_schedule.py
py_momentum/dagster/utils/: calculations.py
py_momentum/data/: data_components.py  fetchers.py  loader.py  models.py  pipeline.py  processors.py  savers.py  storage.py  utils.py  validators.py
py_momentum/execution/: trade_executor.py
py_momentum/logger/: trade_logger.py
py_momentum/logging/: trade_logger.py
py_momentum/portfolio/: __init__.py  interfaces.py  portfolio.py  portfolio_manager.py  position_sizers.py  risk_models.py
py_momentum/py_momentum/: download.py  maina.py  run_ranker.py
py_momentum/py_momentum/criteria/: base.py  max_move.py  moving_average.py
py_momentum/py_momentum/downloader/: __init__.py  downloader.py  saver.py
py_momentum/py_momentum/metrics/: atr.py  base.py
py_momentum/py_momentum/models/: stock_statistics.py
py_momentum/py_momentum/ranker/: stock_ranker.py
py_momentum/py_momentum/regression/: base.py  exponential.py  relative_growth.py
py_momentum/py_momentum/utils/: data_loader.py
py_momentum/py_momentum/visualisation/: stock_visualiser.py
py_momentum/strategy/: __init__.py  factory.py  filters.py  interfaces.py  portfolio.py  position_sizing.py  ranking.py  ranking_methods.py  rebalance_threshold.py  rebalancer.py  rebalancing.py  trading_strategy.py  transaction_costs.py  trend_filters.py
py_momentum/trading/: trade_executor.py
py_momentum/utils/: calculations.py  config_util.py  data_loader.py  date_utils.py
py_momentum/visualisation/: plotter.py
tests/app/test_strategy/: test_models.py
tmp_aw12cv5/history/: runs.db
tmp_aw12cv5/history/runs/: index.db
tmp_aw12cv5/schedules/: schedules.db
tmpazldcnkr/history/: runs.db
tmpazldcnkr/history/runs/: index.db  (+4 more)
tmpazldcnkr/schedules/: schedules.db
tmpdrhzuedb/history/: runs.db
tmpdrhzuedb/schedules/: schedules.db
tmpdrhzuedb/storage/: snp500_symbols
tmprkzmviaa/history/: runs.db
tmprkzmviaa/schedules/: schedules.db
(+43 files in other folders)
