[project]
name = "py_momentum"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Joon Kang", email = "denim.bluu@gmail.com"},
]
dependencies = [
    "yfinance>=0.2.41",
    "scipy>=1.14.0",
    "pandas>=2.2.2",
    "click>=8.1.7",
    "tqdm>=4.66.4",
    "loguru>=0.7.2",
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "fastapi-code-generator>=0.5.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
lint = [
    "ruff>=0.5.5",
]
dev = [
    "ptpython>=3.0.29",
]
