[project]
name = "py_momentum"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Joon Kang", email = "denim.bluu@gmail.com" }]
dependencies = [
    "yfinance>=0.2.41",
    "scipy>=1.14.0",
    "pandas>=2.2.2",
    "click>=8.1.7",
    "tqdm>=4.66.4",
    "loguru>=0.7.2",
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "fastapi-code-generator>=0.5.1",
    "redis>=5.0.7",
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = ["pytest>=8.3.2"]
lint = ["ruff>=0.5.5"]
dev = [
    "ptpython>=3.0.29",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "W",
    "F",
    "I",   # Default rules (explicitly listed for clarity)
    "B",   # flake8-bugbear: finds likely bugs and design problems
    "C",   # flake8-comprehensions: writes better list/set/dict comprehensions
    "N",   # pep8-naming: checks your naming conventions
    "UP",  # pyupgrade: upgrades syntax for newer Python versions
    "ERA", # eradicate: finds commented out code
]

# Exclude a variety of commonly ignored directories.
exclude = [".git", ".ruff_cache", "**/__pycache__", "dist", "venv"]
ignore = ["E501", "COM812", "ISC001", "B008", "B904"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Ignore unused imports in __init__.py files
"tests/**/*.py" = ["S101"] # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
