[tool.poetry]
name = "py-momentum"
version = "0.1.0"
description = ""
authors = ["denimbluu <denim.bluu@gmail.com>"]
readme = "README.md"
packages = [{ include = "py_momentum", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.40"
scipy = "^1.14.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"


aiohttp = "^3.9.5"
aiolimiter = "^1.1.0"
click = "^8.1.7"
rich = "^13.7.1"
[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"
ptpython = "^3.0.27"

ipython = "^8.26.0"
notebook = "^7.2.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-momentum = "py_momentum.__main__:main"
